# HexOS

./: CMakeLists.txt  Makefile  README.md  build.ps1  linker.ld
boot/: grub.cfg  isr.asm  multiboot.asm
gui_prototype/: CMakeLists.txt
gui_prototype/include/desktop/: layer.h  wallpaper.h
gui_prototype/include/engine/: cell.h  color.h  draw.h  engine.h  surface.h
gui_prototype/include/graphics/: font.h  glyph.h  renderer.h
gui_prototype/include/ui/: widget.h
gui_prototype/src/: main.c
gui_prototype/src/desktop/: layer.c  wallpaper.c
gui_prototype/src/engine/: cell.c  color.c  draw.c  engine.c  surface.c
gui_prototype/src/graphics/: font.c  renderer.c
gui_prototype/src/ui/: widget.c
kernel/: auth.c  auth.h  idt.c  idt.h  kernel.c  keyboard.c  keyboard.h  memory.c  memory.h  ports.h  screen.c  screen.h  security.c  security.h  shell.c  string.c  string.h
